@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * Added two new theme bases; see *Appearance > Theme Base*.
 * Added system to check if saved theme options match selected theme base.
+* Added "Custom CSS" option utlizing code editor to all theme bases (except Developer).
 * Added editor stylesheet for editing posts and pages.
 * Added unique HTML ID's to sections of custom layouts like `page-slug-section-1`.
 * Added Portfolios plugin to recommended plugins when installing theme.
